--- a/front2/index.css
+++ b/front2/index.css
@@ -2,4 +2,9 @@
     width: 50px;
     height: 50px;
     border: 1px solid black;
+    background-color: aquamarine;
+}
+
+.container {
+    flex-wrap: wrap;
 }
